--- a/.prettierrc
+++ b/.prettierrc
@@ -2,7 +2,16 @@
     "printWidth": 85,
     "arrowParens": "always",
     "semi": false,
+    "tabWidth": 4,
     "singleQuote": true,
     "jsxSingleQuote": true,
-    "jsxBracketSameLine": true
+    "jsxBracketSameLine": true,
+    "overrides": [
+        {
+            "files": "*.md",
+            "options": {
+                "tabWidth": 2
+            }
+        }
+    ]
 }
